[Bin] Zigbee TXRX
Simple Zigbee sniffing demo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -116,3 +116,8 @@ name = "zwave_txrx"
 test = false
 doctest = false
 bench = false
+[[bin]]
+name = "zigbee_txrx"
+test = false
+doctest = false
+bench = false
