[Bin] Add Wisun TX/RX test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -126,3 +126,8 @@ name = "rts_txrx"
 test = false
 doctest = false
 bench = false
+[[bin]]
+name = "wisun_txrx"
+test = false
+doctest = false
+bench = false
